--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ability-it",
+  "name": "abilitytech",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.24.0",
-    "react-router-dom": "^6.25.1"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "@google/genai": "1.24.0",
+    "react-router-dom": "6.25.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
